Fix unreadable text in error explanation

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -14,6 +14,7 @@ div.field, div.actions {
   padding: 7px;
   padding-bottom: 0;
   margin-bottom: 20px;
+  color: #000;
   background-color: #f0f0f0;
 }
 
